--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-debounce": "^3.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
