--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "axios": "^0.21.1",
-    "fastify": "^3.20.2"
+    "fastify": "^3.20.2",
+    "fastify-cors": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
