--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "../frontend/node_modules/.bin/nuxt",
     "build": "../frontend/node_modules/.bin/nuxt build",
-    "start": "../frontend/node_modules/.bin/nuxt start",
+    "lint": "npm run lint:js && npm run lint:style",
+    "dev": "../frontend/node_modules/.bin/nuxt",
     "generate": "../frontend/node_modules/.bin/nuxt generate",
     "lint:js": "../frontend/node_modules/.bin/eslint --ext \\\".js,.vue\\\" --ignore-path .gitignore .",
     "lint:style": "../frontend/node_modules/.bin/stylelint \\\"**/*.{vue,css}\\\" --ignore-path .gitignore",
-    "lint": "npm run lint:js && npm run lint:style"
+    "start": "../frontend/node_modules/.bin/nuxt start"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vue-debounce": "^3.0.1"
+    "vue-debounce": "^3.0.1",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -24,13 +25,18 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/vuetify": "^1.12.1",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "prettier": "^2.3.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vuetify-loader": "^1.7.0"
   }
 }
